Commit of draft of CommonGoalCardDeck
Bisogna sistemare il metodo per il draw e la gestione final/static degli attributi